# gonimo

./: .dir-locals.el  .gitignore  .travis.yml  README.md  Readme.md  cabal-ghcjs  cabal-ghcjs.project  cabal.project  default.nix  gonimo-back.cabal  gonimo-deploy.nix  reflex-host.nix  renameModule.sh  runIn.sh  shell.nix  stack-7.10.yaml  stack-8.0.nix  stack-8.0.yaml  stack.nix
back/: ghcjs-dom-jsffi.nix  ghcjs-dom.nix  ghcjs.nix  gonimo-back.cabal  shell.nix  workOn.sh
back/app/: Dev.hs  GonimoBack.hs  PSGenerator.hs  Prod.hs
back/certs/: certificate.csr  certificate.pem  key.pem
back/data/: families.txt  predicates.txt
back/docs/: Invitation.md
back/experiments/: CRUD.hs
back/src/: Paths_gonimo_back.hs
back/src/Control/Logging/: Extended.hs
back/src/Control/Monad/: RIO.hs
back/src/Data/: IndexedTable.hs
back/src/Gonimo/: Server.hs  SocketServer.hs  WebAPI.hs
back/src/Gonimo/CodeGen/: TypeBridges.hs
back/src/Gonimo/Database/Effects/: Servant.hs
back/src/Gonimo/Db/: Entities.hs  PersistFields.hs
back/src/Gonimo/Server/: Auth.hs  Authorize.hs  CRUD.hs  Cache.hs  CachedDb.hs  Clients.hs  CodeInvitation.hs  Config.hs  Db.hs  Effects.hs  EmailInvitation.hs  Error.hs  Handler.hs  Handlers.hs  Invitation.hs  Messenger.hs  NameGenerator.hs  Session.hs  State.hs  Subscriber.hs
back/src/Gonimo/Server/Authorize/: Internal.hs
back/src/Gonimo/Server/Cache/: Devices.hs  FamilyAccounts.hs  IndexedTable.hs  Internal.hs  Invitations.hs  Loader.hs
back/src/Gonimo/Server/CachedDb/: Internal.hs
back/src/Gonimo/Server/Clients/: ClientStatus.hs  Internal.hs
back/src/Gonimo/Server/Config/: Internal.hs
back/src/Gonimo/Server/Db/: Account.hs  Device.hs  Family.hs  Internal.hs  Invitation.hs  IsDb.hs  User.hs
back/src/Gonimo/Server/Handler/: Internal.hs
back/src/Gonimo/Server/Handlers/: Auth.hs  Messenger.hs  Session.hs  Socket.hs
back/src/Gonimo/Server/Messenger/: Internal.hs
back/src/Gonimo/Server/Session/: Internal.hs
back/src/Gonimo/Server/State/: Session.hs  SessionThread.hs  Types.hs
back/src/Gonimo/Server/Subscriber/: Types.hs
back/src/Gonimo/Types/: Extended.hs
back/src/Utils/: Constants.hs  STM.hs
back/src/Utils/System/: Random.hs
back/test/: Spec.hs
back/test/Gonimo/Server/Authorize/: InternalSpec.hs
back/tst/Gonimo/Server/: AuthSpec.hs
back/tst/Test/: DBSetup.hs
backend/: backend.cabal
backend/src/: Backend.hs
common/: common.cabal  ghcjs.nix  gonimo-common.cabal  splices.dump  workOn.sh
common/src/Common/: Route.hs
common/src/Gonimo/: Constants.hs  I18N.hs  Prelude.hs  SocketAPI.hs  Types.hs
common/src/Gonimo/Db/: Entities.hs
common/src/Gonimo/Lib/: RequestResponse.hs
common/src/Gonimo/Server/: Error.hs  Messenger.hs
common/src/Gonimo/Server/Messenger/: Internal.hs
common/src/Gonimo/Server/State/: Types.hs
common/src/Gonimo/SocketAPI/: APIVersion.hs  CRUD.hs  Internal.hs  Invitation.hs  Model.hs  Types.hs  V1.hs
common/src/Gonimo/SocketAPI/Invitation/: Internal.hs  Legacy.hs
common/src/Gonimo/SocketAPI/View/: Account.hs  Family.hs
common/src/Reflex/: Behavior.hs
front/: .hlint.yaml  Setup.hs  ghc.nix  gonimo-front.cabal  postBuild.sh  postBuildGhc.sh  preBuild.sh  shell.nix  shell.nix.generated  stack.yaml  workOn.sh  workOnGhc.sh
front-android/: gonimo-front-android.cabal
front-android/app/: Android.hs
front-ghcjs/: Setup.hs  devRoot  gonimo-front-ghcjs.cabal  postBuild.sh  preBuild.sh
front-ghcjs/app/: GonimoFront.hs
front-warp/: gonimo-front-warp.cabal
front-warp/app/: Warp.hs
front/app/: GonimoFront.hs  Mobile.hs
front/doc/: Gonimo-Architecture.md
front/src/Gonimo/Client/: AcceptInvitation.hs  Account.hs  App.hs  Auth.hs  Baby.hs  Channel.hs  Config.hs  ConfirmationButton.hs  Device.hs  DeviceList.hs  EditStringButton.hs  Environment.hs  Family.hs  Host.hs  I18N.hs  Invite.hs  Main.hs  MessageBox.hs  Model.hs  NavBar.hs  NoSleep.hs  Parent.hs  Prelude.hs  Reflex.hs  Router.hs  Server.hs  Settings.hs  Storage.hs  Subscriber.hs  Util.hs
front/src/Gonimo/Client/AcceptInvitation/: Internal.hs  UI.hs
front/src/Gonimo/Client/Account/: API.hs  Impl.hs  Internal.hs
front/src/Gonimo/Client/App/: Internal.hs  Types.hs  UI.hs
front/src/Gonimo/Client/Auth/: API.hs  I18N.hs  Impl.hs
front/src/Gonimo/Client/Baby/: Internal.hs  Socket.hs  UI.hs
front/src/Gonimo/Client/ConfirmationButton/: I18N.hs
front/src/Gonimo/Client/Device/: Impl.hs
front/src/Gonimo/Client/DeviceList/: Internal.hs  UI.hs
front/src/Gonimo/Client/EditStringButton/: I18N.hs
front/src/Gonimo/Client/Family/: Impl.hs  Internal.hs  RoleSelector.hs  UI.hs
front/src/Gonimo/Client/Host/: Impl.hs
front/src/Gonimo/Client/I18N/: UI.hs
front/src/Gonimo/Client/Invite/: Internal.hs  UI.hs
front/src/Gonimo/Client/JS/: Audio.hs  OYD.hs  Volume.hs
front/src/Gonimo/Client/MessageBox/: Internal.hs  UI.hs
front/src/Gonimo/Client/NavBar/: Internal.hs  UI.hs
front/src/Gonimo/Client/Parent/: Connections.hs  UI.hs
front/src/Gonimo/Client/Reflex/: Dom.hs
front/src/Gonimo/Client/Router/: Impl.hs
front/src/Gonimo/Client/Server/: State.hs
front/src/Gonimo/Client/Settings/: UI.hs
front/src/Gonimo/Client/Storage/: Keys.hs
front/src/Gonimo/Client/Subscriber/: API.hs  Impl.hs
front/src/Gonimo/Client/UI/: DeviceCoupling.hs  DeviceCoupling.html  Invite.hs
front/src/Gonimo/Client/WebRTC/: Channel.hs  Channels.hs  Message.hs
front/src/Gonimo/DOM/: Window.hs
front/src/Gonimo/DOM/Navigator/: MediaDevices.hs
front/src/Gonimo/SocketAPI/: Translations.hs
front/src/Reflex/Class/: Extended.hs
front/src/Reflex/Dom/: MDC.hs
front/src/Reflex/Dynamic/: Extended.hs
front/static/: index-ghcjs.html  index.html  jsaddle.js  stolenSession-de.html
front/static/css/: app.css  gonimo.css  style-browser.css
front/static/js/: ReflexDomMDC.js  env.js
front/static/res/values/: strings.xml
front/static/res/values-de/: strings.xml
front/static/resources/css/: icons.css
front/static/resources/js/: adapter.js  bowser.min.js
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src-bin/: main.hs
(+126 files in other folders)
