name:                gonimo-back
version:             0.1.0.0
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert.klotzner@gmx.at

-- copyright:

category:            Web

build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules: Gonimo.Database.Effects
                 , Gonimo.Database.Effects.PersistDatabase
                 , Gonimo.WebAPI
                 , Gonimo.Types
                 , Gonimo.Server
                 , Gonimo.Server.Auth
                 , Gonimo.Server.AuthHandlers
                 , Gonimo.Server.Handlers
                 , Gonimo.Server.DbEntities
                 , Gonimo.Server.DbTypes
                 , Gonimo.Server.Effects
                 , Gonimo.Server.Invitation
                 , Gonimo.Server.Effects.Internal
                 , Gonimo.Server.Effects.TestServer
                 , Gonimo.Database.Effects.Servant
                 , Gonimo.Error
                 , Gonimo.Server.EmailInvitation
                 , Gonimo.Util

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       aeson
                     , attoparsec
                     , base >=4.8 && <4.9
                     , base64-bytestring
                     , bytestring >= 0.10.6.0
                     , crypto-api
                     , either >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , http-api-data
                     , lifted-base >= 0.2.3.6
                     , mime-mail >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-server
                     , smtp-mail
                     , text >= 1.2.1.3
                     , text-show
                     , time >= 1.5.0.1
                     , template-haskell
                     , transformers >= 0.4.2.0
                     , wai
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable gonimo-back
  main-is:             Main.hs

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       aeson
                     , attoparsec
                     , base >=4.8 && <4.9
                     , base64-bytestring
                     , bytestring >= 0.10.6.0
                     , crypto-api
                     , either >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , gonimo-back
                     , http-api-data
                     , lifted-base >= 0.2.3.6
                     , mime-mail >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-server
                     , smtp-mail
                     , text >= 1.2.1.3
                     , text-show
                     , time >= 1.5.0.1
                     , template-haskell
                     , transformers >= 0.4.2.0
                     , wai
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010


executable psGenerator
  main-is:            PSGenerator.hs
  other-modules:      Gonimo.TypeBridges
                    , Gonimo.PSTypes
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts
  build-depends:       aeson
                     , attoparsec
                     , base              >= 4.8 && <4.9
                     , base64-bytestring
                     , bytestring        >= 0.10.6.0
                     , crypto-api
                     , either            >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , gonimo-back
                     , http-api-data
                     , lens
                     , lifted-base       >= 0.2.3.6
                     , mime-mail         >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge >= 0.3.0.3
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-purescript
                     , servant-server
                     , smtp-mail
                     , text              >= 1.2.1.3
                     , text-show
                     , time              >= 1.5.0.1
                     , transformers      >= 0.4.2.0
                     , wai
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tst
  default-language:   Haskell2010
  build-depends:      base              >= 4.8 && <4.9
               ,      gonimo-back
               ,      tasty
               ,      tasty-smallcheck
               ,      tasty-quickcheck
               ,      tasty-hspec
               ,      tasty-hunit
