name:                gonimo-back
version:             0.1.0.0
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

library
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -fwarn-tabs -O0
  else
      ghc-options:   -Wall -fwarn-tabs -O2
  exposed-modules: Gonimo.CodeGen.PSTypes
                 , Gonimo.CodeGen.TypeBridges
                 , Gonimo.Database.Effects
                 , Gonimo.Database.Effects.PersistDatabase
                 , Gonimo.Database.Effects.Servant
                 , Gonimo.Server
                 , Gonimo.Server.Auth
                 , Gonimo.Server.AuthHandlers
                 , Gonimo.Server.DbEntities
                 , Gonimo.Server.Effects
                 , Gonimo.Server.Effects.Internal
                 , Gonimo.Server.Effects.Servant
                 , Gonimo.Server.Effects.Common
                 , Gonimo.Server.Effects.Development
                 , Gonimo.Server.Effects.Production
                 , Gonimo.Server.EmailInvitation
                 , Gonimo.Server.Handlers
                 , Gonimo.Server.Invitation
                 , Gonimo.Server.State
                 , Gonimo.Server.Types
                 , Gonimo.Util
                 , Gonimo.WebAPI
                 , Gonimo.WebAPI.Error
                 , Gonimo.WebAPI.Types
                 , Gonimo.WebAPI.Verbs
  other-modules:   Gonimo.Server.AuthHandlers.Internal
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       aeson
                     , attoparsec
                     , base >=4.8 && <4.9
                     , base64-bytestring
                     , bytestring >= 0.10.6.0
                     , crypto-api
                     , containers
                     , either >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , http-api-data
                     , http-types
                     , lens
                     , lifted-base >= 0.2.3.6
                     , mime-mail >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-purescript
                     , servant-server
                     , servant-subscriber >= 0.1
                     , smtp-mail
                     , stm
                     , template-haskell
                     , text >= 1.2.1.3
                     , text-show
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
                     , wai
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable gonimo-back
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
  ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
  main-is:            GonimoBack.hs

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       aeson
                     , attoparsec
                     , base >=4.8 && <4.9
                     , base64-bytestring
                     , bytestring >= 0.10.6.0
                     , containers
                     , crypto-api
                     , either >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , gonimo-back
                     , http-api-data
                     , lifted-base >= 0.2.3.6
                     , mime-mail >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-server
                     , servant-subscriber
                     , smtp-mail
                     , stm
                     , template-haskell
                     , text >= 1.2.1.3
                     , text-show
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
                     , wai
-- Only needed for development:
                     , wai-middleware-static 
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      app
  default-language:    Haskell2010

executable psGenerator
  main-is:            PSGenerator.hs
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts
  build-depends:       aeson
                     , attoparsec
                     , base              >= 4.8 && <4.9
                     , base64-bytestring
                     , bytestring        >= 0.10.6.0
                     , crypto-api
                     , either            >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , gonimo-back
                     , http-api-data
                     , lens
                     , lifted-base       >= 0.2.3.6
                     , mime-mail         >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge >= 0.3.0.3
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-purescript
                     , servant-server
                     , smtp-mail
                     , text              >= 1.2.1.3
                     , text-show
                     , time              >= 1.5.0.1
                     , transformers      >= 0.4.2.0
                     , wai
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite test
  ghc-options:       -Wall
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tst
  default-language:   Haskell2010
  build-depends:      base              >= 4.8 && <4.9
               ,      gonimo-back
               ,      tasty
               ,      tasty-smallcheck
               ,      tasty-quickcheck
               ,      tasty-hspec
               ,      tasty-hunit
