name:                gonimo-back
version:             0.7.4.2
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

data-files:          data/*.txt

Flag dev
    Description:   Turn on development settings.
    Default:       False

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules: Gonimo.CodeGen.PSTypes
                 , Gonimo.CodeGen.TypeBridges
                 , Gonimo.Database.Effects
                 , Gonimo.Database.Effects.PersistDatabase
                 , Gonimo.Database.Effects.Servant
                 , Gonimo.Server
                 , Gonimo.Server.Auth
                 , Gonimo.Server.Db.Internal
                 , Gonimo.Server.Db.Device
                 , Gonimo.Server.Db.Entities
                 , Gonimo.Server.Db.Family
                 , Gonimo.Server.Effects
                 , Gonimo.Server.Effects.Common
                 , Gonimo.Server.Effects.Development
                 , Gonimo.Server.Effects.Internal
                 , Gonimo.Server.Effects.Logging
                 , Gonimo.Server.Effects.Production
                 , Gonimo.Server.Effects.Servant
                 , Gonimo.Server.EmailInvitation
                 , Gonimo.Server.Error
                 , Gonimo.Server.Handlers
                 , Gonimo.Server.Handlers.Auth
                 , Gonimo.Server.Handlers.Session
                 , Gonimo.Server.Handlers.Socket
                 , Gonimo.Server.InitDb
                 , Gonimo.Server.Invitation
                 , Gonimo.Server.State
                 , Gonimo.Server.State.Session
                 , Gonimo.Server.State.Types
                 , Gonimo.Server.State.MessageBox
                 , Gonimo.Server.Types
                 , Gonimo.Util
                 , Gonimo.WebAPI
                 , Gonimo.WebAPI.Types
                 , Gonimo.WebAPI.Verbs
  other-modules:   Gonimo.Server.Handlers.Auth.Internal
               ,   Utils.Control.Monad.Trans.Maybe
               ,   Utils.System.Random
               ,   Utils.Constants
               ,   Utils.STM
               ,   Paths_gonimo_back
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       
                           aeson
                       , attoparsec
                       , base >=4.8 && <4.9
                       , base64-bytestring
                       , bytestring >= 0.10.6.0
                       , containers
                       , crypto-api
                       , either >= 4.4.1
                       , errors
                       , extra
                       , fast-logger
                       , freer
                       , http-api-data
                       , http-types
                       , lens
                       , lens >= 4.13
                       , lifted-base >= 0.2.3.6
                       , mime-mail >= 0.4.11
                       , monad-logger
                       , monad-stm
                       , mtl
                       , neat-interpolation
                       , persistent
                       , persistent-postgresql
                       , persistent-sqlite
                       , persistent-template
                       , purescript-bridge
                       , random
                       , resource-pool
                       , servant
                       , servant-docs
                       , servant-purescript
                       , servant-server
                       , servant-subscriber >= 0.1
                       , smtp-mail
                       , stm
                       , template-haskell
                       , text >= 1.2.1.3
                       , time >= 1.5.0.1
                       , transformers >= 0.4.2.0
                       , wai
                       , warp
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -fwarn-tabs -O0
  else
      ghc-options:   -Wall -Werror -fwarn-tabs -O2

  extra-libraries:    pq
                    , crypto
                    , ssl

  hs-source-dirs:      src
  default-language:    Haskell2010

executable gonimo-back
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
  ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
  main-is:            GonimoBack.hs

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       aeson
                     , attoparsec
                     , base >=4.8 && <4.9
                     , base64-bytestring
                     , bytestring >= 0.10.6.0
                     , containers
                     , crypto-api
                     , either >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , gonimo-back
                     , http-api-data
                     , lens >= 4.13
                     , lifted-base >= 0.2.3.6
                     , mime-mail >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge
                     , random
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-server
                     , servant-subscriber
                     , smtp-mail
                     , stm
                     , template-haskell
                     , text >= 1.2.1.3
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
                     , wai
-- Only needed for development:
                     , wai-middleware-static 
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      app
  default-language:    Haskell2010

executable gonimo-psGenerator
  main-is:            PSGenerator.hs
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts
  build-depends:       aeson
                     , attoparsec
                     , base              >= 4.8 && <4.9
                     , base64-bytestring
                     , bytestring        >= 0.10.6.0
                     , crypto-api
                     , either            >= 4.4.1
                     , errors
                     , fast-logger
                     , freer
                     , gonimo-back
                     , http-api-data
                     , lens
                     , lens >= 4.13
                     , lifted-base       >= 0.2.3.6
                     , mime-mail         >= 0.4.11
                     , monad-logger
                     , mtl
                     , neat-interpolation
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , purescript-bridge
                     , resource-pool
                     , servant
                     , servant-docs
                     , servant-purescript
                     , servant-server
                     , smtp-mail
                     , text              >= 1.2.1.3
                     , time              >= 1.5.0.1
                     , transformers      >= 0.4.2.0
                     , wai
                     , warp
  ghc-options: -Wall
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite test
  ghc-options:       -Wall
  main-is:            Spec.hs
  other-modules: Test.Utils
               , Test.DBSetup
               , Gonimo.Server.AuthSpec

  type:               exitcode-stdio-1.0
  hs-source-dirs:     tst

  default-language:   Haskell2010
  build-depends:      
                          QuickCheck
                      , base              >= 4.8 && <4.9
                      , freer
                      , gonimo-back
                      , hspec
                      , hspec-discover
                      , hspec-expectations-pretty-diff
                      , hspec-smallcheck
                      , lens >= 4.13
                      , persistent-sqlite
                      , persistent-template
                      , servant-server
                      , smallcheck
                      , time

