name:                gonimo-back
version:             0.1-test
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

data-files:          data/*.txt

Flag dev
    Description:   Turn on development settings.
    Default:       False

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -fwarn-tabs -O0
  else
      ghc-options:   -Wall -Werror -fwarn-tabs -O2
      extra-libraries:    pq
                        , crypto
                        , ssl

  exposed-modules:  Gonimo.Database.Effects.Servant
                , Gonimo.Server.Auth
                , Gonimo.Server.Db.Internal
                , Gonimo.Server.Db.Device
                , Gonimo.Server.Db.Family
                , Gonimo.Server.Db.Account
                , Gonimo.Server.Effects
                , Gonimo.Server.EmailInvitation
                , Gonimo.Server.Handlers
                , Gonimo.Server.Handlers.Auth
                , Gonimo.Server.Handlers.Messenger
                , Gonimo.Server.Handlers.Socket
                , Gonimo.Server.NameGenerator
                , Gonimo.Server.Messenger
                , Gonimo.Server.Messenger.Internal
                , Gonimo.SocketServer
                , Gonimo.Server.Subscriber.Types
                , Gonimo.Server.Subscriber

  other-modules:  Utils.Control.Monad.Trans.Maybe
                , Utils.System.Random
                , Utils.Constants
                , Utils.STM
                , Paths_gonimo_back

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:         aeson
                      , async
                      , attoparsec
                      , base >=4.8 && <4.10
                      , base64-bytestring
                      , bytestring >= 0.10.6.0
                      , containers
                      , crypto-api
                      , either >= 4.4.1
                      , errors
                      , extra
                      , fast-logger
                      , gonimo-common
                      , http-api-data
                      , http-types
                      , lens
                      , lens >= 4.13
                      , lifted-async
                      , lifted-base >= 0.2.3.6
                      , mime-mail >= 0.4.11
                      , monad-control
                      , monad-logger
                      , monad-stm
                      , mtl
                      , neat-interpolation
                      , persistent
                      , persistent-postgresql
                      , persistent-sqlite
                      , persistent-template
                      , random
                      , resource-pool
                      , servant
                      , servant-docs
                      , servant-server
                      , smtp-mail
                      , stm
                      , template-haskell
                      , text >= 1.2.1.3
                      , time >= 1.5.0.1
                      , transformers >= 0.4.2.0
                      , transformers-base
                      , vector
                      , wai
                      , wai-websockets
                      , warp
                      , websockets


executable gonimo-back
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
  ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
  main-is:            GonimoBack.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       aeson
                    , attoparsec
                    , base >=4.8 && <4.10
                    , base64-bytestring
                    , bytestring >= 0.10.6.0
                    , containers
                    , crypto-api
                    , either >= 4.4.1
                    , errors
                    , fast-logger
                    , gonimo-back
                    , http-api-data
                    , lens >= 4.13
                    , lifted-base >= 0.2.3.6
                    , mime-mail >= 0.4.11
                    , monad-logger
                    , mtl
                    , neat-interpolation
                    , persistent
                    , persistent-postgresql
                    , persistent-sqlite
                    , persistent-template
                    , random
                    , resource-pool
                    , servant
                    , servant-docs
                    , servant-server
                    , smtp-mail
                    , stm
                    , template-haskell
                    , text >= 1.2.1.3
                    , time >= 1.5.0.1
                    , transformers >= 0.4.2.0
                    , wai
                    , gonimo-common
                    , safe
-- Only needed for development:
                    , wai-middleware-static 
                    , warp




-- test-suite test
--   ghc-options:       -Wall
--   main-is:            Spec.hs

--   other-modules: Test.Utils
--                , Test.DBSetup
--                , Gonimo.Server.AuthSpec

--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     tst

--   default-language:   Haskell2010
--   build-depends:      
--                           QuickCheck
--                       , base              >= 4.8 && <4.10
--                       , gonimo-back
--                       , hspec
--                       , hspec-discover
--                       , hspec-expectations-pretty-diff
--                       , hspec-smallcheck
--                       , lens >= 4.13
--                       , persistent-sqlite
--                       , persistent-template
--                       , servant-server
--                       , smallcheck
--                       , time
--                       , gonimo-common

