name:                gonimo-back
version:             0.1-test
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

data-files:          data/*.txt

Flag dev
    Description:   Turn on development settings.
    Default:       False

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -fwarn-tabs -O0
  else
      ghc-options:   -Wall -Werror -fwarn-tabs -O2
      extra-libraries:    pq
                        , crypto
                        , ssl

  exposed-modules:  Gonimo.Database.Effects.Servant
                  , Control.Logging.Extended
                  , Gonimo.Db.Entities
                  , Gonimo.Db.PersistFields
                  -- , Gonimo.Server
                  , Gonimo.Server.Authorize.Internal
                  , Gonimo.Server.Cache.Devices
                  , Gonimo.Server.Cache.FamilyAccounts
                  , Gonimo.Server.Cache.IndexedTable
                  , Gonimo.Server.Cache.Internal
                  , Gonimo.Server.Cache.Invitations
                  , Gonimo.Server.Clients.Internal
                  , Gonimo.Server.Clients.ClientStatus
                  , Gonimo.Server.Config
                  , Gonimo.Server.Config.Internal
                  , Gonimo.Server.Db.Account
                  , Gonimo.Server.Db.Device
                  , Gonimo.Server.Db.Family
                  , Gonimo.Server.Db.Internal
                  , Gonimo.Server.Db.Invitation
                  , Gonimo.Server.Db.IsDb
                  , Gonimo.Server.EmailInvitation
                  , Gonimo.Server.NameGenerator
                  , Gonimo.Server.Session
                  , Gonimo.Server.Session.Internal

  other-modules:  Utils.Control.Monad.Trans.Maybe
                , Utils.System.Random
                , Utils.Constants
                , Utils.STM
                , Paths_gonimo_back

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts
  -- Check for encoding changes prior to bumping aeson version!
  build-depends:        aeson < 1.3.0
                      , async
                      , attoparsec
                      , base >=4.8 && <4.10
                      , base64-bytestring
                      , bytestring >= 0.10.6.0
                      , containers
                      , crypto-api
                      , data-default >= 0.7.1.1
                      , either >= 4.4.1
                      , errors
                      , extra
                      , fast-logger
                      , generic-deriving
                      , gonimo-common
                      , http-api-data
                      , http-types
                      , lens >= 4.13
                      , lifted-async
                      , lifted-base >= 0.2.3.6
                      , logging
                      , mime-mail >= 0.4.11
                      , monad-control
                      , monad-logger
                      , monad-stm
                      , mtl
                      , neat-interpolation
                      , persistent
                      , persistent-postgresql
                      , persistent-sqlite
                      , persistent-template
                      , random
                      , reflex
                      , reflex-host
                      , resource-pool
                      , smtp-mail
                      , stm
                      , template-haskell
                      , text >= 1.2.1.3
                      , time >= 1.5.0.1
                      , transformers >= 0.4.2.0
                      , transformers-base
                      , vector
                      , wai
                      , wai-websockets
                      , warp
                      , websockets


executable gonimo-back
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
  -- threaded disabled because of: https://ghc.haskell.org/trac/ghc/ticket/13751
  -- Can be enabled again, once we upgrade to ghc 8.2
  -- ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
  ghc-options:        -O2  -Wall
  main-is:            GonimoBack.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:       aeson
                    , attoparsec
                    , base >=4.8 && <4.10
                    , base64-bytestring
                    , bytestring >= 0.10.6.0
                    , containers
                    , crypto-api
                    , either >= 4.4.1
                    , errors
                    , fast-logger
                    , gonimo-back
                    , http-api-data
                    , lens >= 4.13
                    , lifted-base >= 0.2.3.6
                    , mime-mail >= 0.4.11
                    , monad-logger
                    , mtl
                    , neat-interpolation
                    , persistent
                    , persistent-postgresql
                    , persistent-sqlite
                    , persistent-template
                    , random
                    , resource-pool
                    , smtp-mail
                    , stm
                    , template-haskell
                    , text >= 1.2.1.3
                    , time >= 1.5.0.1
                    , transformers >= 0.4.2.0
                    , wai
                    , gonimo-common
                    , safe
                    , warp
                    , http-types
-- Only needed for development:
                    , wai-middleware-static 




test-suite test
  ghc-options:       -Wall
  main-is:            Spec.hs

  other-modules: Gonimo.Server.Authorize.InternalSpec

  type:               exitcode-stdio-1.0
  hs-source-dirs:     test

  default-language:   Haskell2010
  build-depends:        base >= 4.8 && <4.10
                      , gonimo-back
                      , gonimo-common
                      , hspec
                      , lens
                      , containers
                      , bytestring
                      , time

